--- a/assignments/projects/chakra-2/client/package.json
+++ b/assignments/projects/chakra-2/client/package.json
@@ -7,14 +7,14 @@
     "moment": "^2.22.2",
     "proptypes": "^1.1.0",
     "react": "^16.4.1",
+    "react-date-picker": "^6.10.4",
     "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "thunk": "0.0.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
